fixed the navbar overlapping page titles

--- a/src/App.css
+++ b/src/App.css
@@ -48,8 +48,11 @@
   width: 100%;
   z-index: 1000;
   height: 60px;
-
   display: flex;
   align-items: center;
   padding: 0 20px;
+}
+
+.content-area {
+  padding-top: 60px;
 }
